--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.aplikasitravel">
+    package="com.example.travelkudian">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,6 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".RegisterTwoAct"></activity>
         <activity android:name=".LoginAct" />
+        <activity android:name=".HomeAct" />
         <activity android:name=".MainActivity" />
         <activity android:name=".RegisterAct">
             <intent-filter>
@@ -23,5 +24,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
